fix duplicated events issue